# vega_lite_4.rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/: README.md  cloropleth_unemployment.rs  diverging_stacked_bar_chart.rs  from_csv.rs  from_json_spec.rs  from_mixed_json_rust.rs  from_nalgebra.rs  from_ndarray.rs  from_polars.rs  from_rulinalg.rs  from_url.rs  line_with_interval.rs  notebook.ipynb  pie_chart.rs  scatterplot.rs  stacked_bar_chart.rs  stock_graph.rs  vconcat_interactive.rs  without_builders.rs
scripts/: custom_changes.py  generate_schema.sh  if_null_fields.py
src/: README.md  lib.rs  removable_value.rs  schema.rs  show_vega.rs  string.rs
src/data/: mod.rs  nalgebra_data.rs  ndarray_data.rs  polars_data.rs  rulinalg_data.rs
