[package]
name = "vega_lite_4"
version = "0.7.0"
authors = [
    "David Bernard <david.bernard.31@gmail.com>",
    "François Mockers <mockersf@gmail.com>",
    "Thomas Aubry <github.thomaub@gmail.com>",
]
edition = "2021"
license = "Apache-2.0"
description = "rust api for vega-lite v4"
repository = "https://github.com/procyon-rs/vega_lite_4.rs"
readme = "README.md"
categories = ["visualization"]
keywords = ["visualization", "plot", "vega", "graphs", "charts"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.12"
derive_more = { version = "2.0", default-features = false, features = [
    "from",
] }
showata = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
ndarray = { version = "0.15", default-features = false, features = [
    "serde",
], optional = true }
csv = { version = "1.1", default-features = false, optional = true }
rulinalg = { version = "0.4", default-features = false, optional = true }
nalgebra = { version = "0.32", default-features = false, features = [
    "serde-serialize",
], optional = true }
polars = { version = "0.46", default-features = false, features = [
    "dtype-datetime",
    "lazy",
], optional = true }

[dev-dependencies]
csv = { version = "1.1", default-features = false }
ndarray-rand = { version = "0.14", default-features = false }
polars = { version = "0.46", default-features = false, features = ["csv"] }

[features]
csv = ["dep:csv"]
default = ["show_vega", "csv", "ndarray"]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]
polars = ["dep:polars"]
rulinalg = ["dep:rulinalg"]
show_vega = ["dep:showata", "dep:anyhow"]

[[example]]
name = "from_nalgebra"
required-features = ["nalgebra"]
[[example]]
name = "from_rulinalg"
required-features = ["rulinalg"]
[[example]]
name = "from_polars"
required-features = ["polars"]

[package.metadata.release]
pre-release-commit-message = ":rocket: (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = ":bookmark: {{version}}"
