[package]
name = "vega_lite_4"
version = "0.8.1"
edition = "2024"
description = "rust api for vega-lite v4"
readme = "README.md"
repository = "https://github.com/procyon-rs/vega_lite_4.rs"
license = "Apache-2.0"
keywords = ["charts", "graphs", "plot", "vega", "visualization"]
categories = ["visualization"]

[package.metadata.release]
pre-release-commit-message = ":rocket: (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = ":bookmark: {{version}}"

[[example]]
name = "from_nalgebra"
required-features = ["nalgebra"]

[[example]]
name = "from_rulinalg"
required-features = ["rulinalg"]

[[example]]
name = "from_polars"
required-features = ["polars"]

[dependencies]
anyhow = { version = "1.0", optional = true }
csv = { version = "1.1", default-features = false, optional = true }
derive_builder = "0.20"
derive_more = { version = "2.0", default-features = false, features = ["from"] }
nalgebra = { version = "0.34", default-features = false, features = [
  "serde-serialize",
], optional = true }
ndarray = { version = "0.17", default-features = false, features = [
  "serde",
], optional = true }
polars = { version = "0.53", default-features = false, features = [
  "dtype-datetime",
  "lazy",
], optional = true }
rulinalg = { version = "0.4", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
showata = { version = "0.3", optional = true }

[dev-dependencies]
csv = { version = "1.1", default-features = false }
ndarray-rand = { version = "0.16", default-features = false }
polars = { version = "0.53", default-features = false, features = ["csv"] }

[features]
default = ["csv", "ndarray", "show_vega"]
csv = ["dep:csv"]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]
polars = ["dep:polars"]
rulinalg = ["dep:rulinalg"]
show_vega = ["dep:anyhow", "dep:showata"]
